<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

        <com.room.mokeys.widget.CustomTitleView
            android:id="@+id/phone_login_custom_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:customTitleText="@string/name_authentication"
            app:customTitleRightimage="false">
        </com.room.mokeys.widget.CustomTitleView>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <com.room.mokeys.ui.MClearEditText
                    android:id="@+id/et_name"
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:layout_marginTop="20dip"
                    android:paddingRight="10dp"
                    android:cursorVisible="true"
                    android:textCursorDrawable='@null'
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/input_name"
                    android:maxLength="11"
                    android:paddingLeft="16dip"
                    android:textColor="#666666"
                    android:background="#999999"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <com.room.mokeys.ui.MClearEditText
                    android:id="@+id/et_code"
                    android:layout_width="0dp"
                    android:layout_height="50dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="#999999"
                    android:cursorVisible="true"
                    android:textCursorDrawable='@null'
                    android:hint="@string/input_id_number"
                    android:paddingRight="10dp"
                    android:paddingLeft="16dip"
                    android:textColor="#666666"
                    android:textSize="18sp" />

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_16sp"
                android:text="@string/authentication_text"/>
            <ImageView
                android:id="@+id/authentication_image"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/student_info_photo_left_normal"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >
                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_margin="30dp"
                    android:background="@color/blue"
                    android:text="@string/goto_authentication"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

</LinearLayout>